Add links of answer codes

--- a/src/BOJ11728.md
+++ b/src/BOJ11728.md
@@ -1,5 +1,8 @@
 ## BOJ11728 - 배열 합치기  
 (문제: https://www.acmicpc.net/problem/11728)  
+(정답:  
+stl sort - https://www.acmicpc.net/source/20076016  
+Merge sort - https://www.acmicpc.net/source/20076064)  
 (시간: 6분)  
 
 Merge Sort 연습문제.
