--- a/src/BOJ2448.md
+++ b/src/BOJ2448.md
@@ -1,7 +1,8 @@
 ## BOJ2448 - 별 찍기 - 11  
 (문제: https://www.acmicpc.net/problem/2448)  
+(정답: https://www.acmicpc.net/source/20058047)  
 (시간: 50분)  
 
-[별 찍기 - 10](/src/BOJ2447) 과 비슷한 프랙탈 도형 문제. 근데 왜 이렇게 오래걸렸지  
+[별 찍기 - 10](/src/BOJ2447.md) 과 비슷한 프랙탈 도형 문제. 근데 왜 이렇게 오래걸렸지  
 
 배열의 크기는 2n\*n 이고, n에 따라 x,y 값을 조정해주면서 호출하면 된다.  
