--- a/src/BOJ11047.md
+++ b/src/BOJ11047.md
@@ -1,4 +1,4 @@
-## BOJ11047 - µ¿Àü 0  
-(¹®Á¦: https://www.acmicpc.net/problem/11047)  
-(Á¤´ä: https://www.acmicpc.net/source/20150353)  
-(½Ã°£: 10ºĞ)  
+ï»¿## BOJ11047 - ë™ì „ 0  
+(ë¬¸ì œ: https://www.acmicpc.net/problem/11047)  
+(ì •ë‹µ: https://www.acmicpc.net/source/20150353)  
+(ì‹œê°„: 10ë¶„)  
