--- a/src/BOJ10816.md
+++ b/src/BOJ10816.md
@@ -5,6 +5,6 @@
 
 정렬된 배열을 이분탐색하는 문제.  
 
-lower_case(int)는 배열의 오름차순을 유지하며 해당 수를 넣을 수 있는 가장 왼쪽의 인덱스를 반환하고, upper_case(int)는 가장 오른쪽의 인덱스를 반환한다. 두 값의 차이가 현재 배열에 있는 해당 수의 개수라고 볼 수 있다.  
+lower_idx(int)는 배열의 오름차순을 유지하며 해당 수를 넣을 수 있는 가장 왼쪽의 인덱스를 반환하고, upper_idx(int)는 가장 오른쪽의 인덱스를 반환한다. 두 값의 차이가 현재 배열에 있는 해당 수의 개수라고 볼 수 있다.  
 
 \<algorithm>의 lower_bound, upper_bound 함수 사용하면 된다.  
