--- a/src/BOJ2252.md
+++ b/src/BOJ2252.md
@@ -3,8 +3,7 @@
 (정답: https://www.acmicpc.net/source/20289537)  
 (시간: 11분)  
 
-위상정렬 문제.  
-
+#### 위상정렬  
 그래프를 bfs와 마찬가지로 인접리스트로 받은 다음, 각 정점의 indegree를 나타내는 배열을 만들어 저장한다.  
 큐를 만들어 indegree가 0인 정점을 큐에 넣는다. 하나씩 빼면서 출력하고 연결된 간선도 함께 "관념적으로" 지워준다. 이 때 간선을 "관념적으로" 지워준다는 의미는 indegree를 1 감소시키는 것이다. 1 감소한 indegree가 0이면 해당 정점도 큐에 넣어준다.  
 
